[studio] fix kick button alignment

--- a/studio/plugins/quiz-match/components/styles/Leaderboard.css
+++ b/studio/plugins/quiz-match/components/styles/Leaderboard.css
@@ -48,6 +48,7 @@
 
     @nest & .name {
       display: flex;
+      align-items: center;
 
       @nest & button {
         opacity: 0;
